made some routes for auth
