# src/useCases/Auth/Login/IUserLoginDTO.ts
@@ -1,0 +1,4 @@
+interface IUserLoginDTO {
+    email: string,
+    password: string
+}
